// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var md5 = require('./md5');

=====================================output=====================================
var md5 = require("./md5");

================================================================================
`;

exports[`md5.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule md5 */

=====================================output=====================================
/* @providesModule md5 */

================================================================================
`;
